[oss-fuzz] UBSAN: null pointer passed as argument 1, which is declared to never be null in packet-mrdisc.c:183:13
This issue was migrated from bug 13707 in our old bug tracker.
Original bug information:
Reporter: Peter Wu
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: Linux
Platform: x86-64
Version: Git
Attachments:
clusterfuzz-testcase-minimized-4774610346180608.pcap: Packet capture file
See also: Issue #14299 (closed)