mrdisc: Verify pinfo->dst is a valid IPv4 address

Change-Id: I828a60091ef59a0381feddfcb6dd7a0d20be67f9
Link: https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=1550
Bug: 13707
Reviewed-on: https://code.wireshark.org/review/21687
Reviewed-by: Peter Wu <peter@lekensteyn.nl>
Petri-Dish: Peter Wu <peter@lekensteyn.nl>
Reviewed-by: Anders Broman <a.broman58@gmail.com>