epan/dissectors/packet-mrdisc.c
@@ -180,7 +180,7 @@ dissect_mrdisc(tvbuff_t *tvb, packet_info *pinfo, proto_tree *parent_tree, void*
 	guint32 dst = g_htonl(MC_ALL_ROUTERS);
 
 	/* Shouldn't be destined for us */
-	if (memcmp(pinfo->dst.data, &dst, 4))
+	if ((pinfo->dst.type != AT_IPv4) || memcmp(pinfo->dst.data, &dst, 4))
 		return 0;
 
 	col_set_str(pinfo->cinfo, COL_PROTOCOL, "MRDISC");
